# test-v8

./: CMakeLists.txt  main.cpp  vcpkg.json
vcpkg/ports/v8/: V8Config-static.cmake
